--- a/index.html
+++ b/index.html
@@ -125,9 +125,11 @@
       <div class="col-lg-12">
         <div class="pull-right">
           {{#if isPlaying}}
-            <button class="btn btn-primary btn-sm glyphicon glyphicon-pause" {{action 'pause'}}>
-              Pause Playlist
-            </button>
+            <div class="btn-group">
+              <button class="btn btn-primary btn-sm glyphicon glyphicon-step-backward" {{action 'previous'}}></button>
+              <button class="btn btn-primary btn-sm glyphicon glyphicon-pause" {{action 'pause'}}></button>
+              <button class="btn btn-primary btn-sm glyphicon glyphicon-step-forward" {{action 'next'}}></button>
+            </div>
           {{else}}
             <button class="btn btn-primary btn-sm glyphicon glyphicon-play" {{action 'play'}}>
               Play Playlist
@@ -151,7 +153,7 @@
     <table class="table table-condensed">
       <tbody>
       {{#each song in this}}
-        <tr>
+        <tr {{bindAttr class="song.isPlaying:active"}}>
           <th>
             {{#if song.isPlaying}}
               <button class="btn btn-primary btn-xs glyphicon glyphicon-pause" {{action 'pauseSong' song}}></button>
