--- a/index.html
+++ b/index.html
@@ -174,6 +174,12 @@
   <script src="js/libs/ember-1.0.0-rc.6.js"></script>
   <script src="js/libs/ember-data.js"></script>
   <script src="js/libs/bootstrap.min.js"></script>
+  <script src="js/libs/fastclick.js"></script>
+  <script>
+    $(document).ready(function() {
+      new FastClick(document.body);
+    });
+  </script>
   <script src="js/metronome.js"></script>
   <script src="js/app.js"></script>
   <script src="js/models/song.js"></script>
