--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <!-- Place everything within .nav-collapse to hide it until above 768px -->
         <div class="nav-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li data-toggle="collapse" data-target=".navbar-responsive-collapse">{{#linkTo songs}}Songs{{/linkTo}}</li>
-            <li data-toggle="collapse" data-target=".navbar-responsive-collapse">{{#linkTo playlists}}Playlists{{/linkTo}}</li>
+            <li data-toggle="collapse" data-target=".navbar-responsive-collapse">{{#link-to 'songs'}}Songs{{/link-to}}</li>
+            <li data-toggle="collapse" data-target=".navbar-responsive-collapse">{{#link-to 'playlists'}}Playlists{{/link-to}}</li>
           </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
@@ -107,12 +107,12 @@
           {{#each playlist in arrangedContent}}
             <tr>
               <td>
-                {{#linkTo playlists.show playlist}}
+                {{#link-to 'playlists.show' playlist}}
                   {{playlist.name}}
                   <div class="pull-right">
                     <em>{{playlist.songs.length}} songs</em>
                   </div>
-                {{/linkTo}}
+                {{/link-to}}
               </td>
             </tr>
           {{/each}}
@@ -167,8 +167,8 @@
   </script>
 
   <script src="js/libs/jquery-1.9.1.js"></script>
-  <script src="js/libs/handlebars-1.0.0-rc.4.js"></script>
-  <script src="js/libs/ember-1.0.0-rc.6.js"></script>
+  <script src="js/libs/handlebars-1.0.0.js"></script>
+  <script src="js/libs/ember-1.0.0.js"></script>
   <script src="js/libs/ember-data.js"></script>
   <script src="js/libs/bootstrap.min.js"></script>
   <script src="js/libs/fastclick.js"></script>
